--- a/followersCount/followers_count.html
+++ b/followersCount/followers_count.html
@@ -10,6 +10,10 @@
   <hr>
   <h2>Click one button to follow</h2>
   <button onclick="increaseCount()">Follow</button>
+  <!--script src="./followers_count.js"></script-->
+  <hr>
+  <h2>Click reset button to clear the followers</h2>
+  <button onclick="resetCount()">Reset</button>
   <script src="./followers_count.js"></script>
 </body>
 </html>
