--- a/weatherReport/weather_report.html
+++ b/weatherReport/weather_report.html
@@ -6,13 +6,23 @@
 <body>
    <h1>Weather Report</h1>
 
-  <form id="weatherForm">
+  <!--form id="weatherForm">
     <label for="city">Enter City:</label>
     <input type="text" id="city" name="city">
     <button type="submit">Get Weather</button>
   </form>
 
-  <div id="weatherInfo"></div>
+  <div id="weatherInfo"></div-->
+
+  <form id="weatherForm2">
+    <label for="latitude">Enter Latitude:</label>
+    <input type="text" id="lat" name="lat">
+    <label for="longitude">Enter Longitude:</label>
+    <input type="text" id="long" name="long">
+    <button type="submit">Get Weather l/L</button>
+  </form>
+
+  <div id="weatherInfo2"></div>
 <script src="./weather_report.js"></script>
 </body>
 </html>
